2001-09-16  Eskil Heyn Olsen  <eskil@eskil.dk>

	* gnome-pilot.m4:
	PISOCK_CFLAGS no longer contains pilot-link version.

2001-09-09  Eskil Heyn Olsen  <eskil@eskil.dk>

	* gnome-pilot.m4:
	Stuff to check version of gnome-pilot

2001-08-20  Pavel Roskin  <proski@gnu.org>

	* gnome-undelfs.m4 (GNOME_UNDELFS_CHECKS): Specify additional
	includes when testing for ext2fs/ext2fs.h.

	* gnome-vfs.m4 (GNOME_WITH_VFS): Specify additional includes
	when testing for rpc/pmap_clnt.h.  Needed for Autoconf 2.50+
	only - older versions don't try to compile headers and ignore
	this argument.

2001-08-04  Darin Adler  <darin@bentspoon.com>

	* .cvsignore: Ignore generated .dep file.

2001-08-02  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* gnome-guile-checks.m4: Made "--without-guile" work. Added $guile_msg 
	  for reporting back.

2001-07-24  Jody Goldberg <jgoldberg@home.com>

	* psiconv.m4 : Add psion macros from Frodo Looijaard <frodol@dds.nl>

2001-07-24  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* gnome-print-check.m4 (AM_PATH_GNOME_PRINT): 
	Correct minimal version test

2001-06-22  Eskil Heyn Olsen  <eskil@eskil.dk>

	* gnome-pilot.m4:
	Fixed the cat of pi-version.h

2001-06-20  Havoc Pennington  <hp@redhat.com>

	* gnome.m4: fix to include the CFLAGS for extra libraries

2001-06-13  Pavel Roskin  <proski@gnu.org>

	* gnome-fileutils.m4: Always explicitly declare main() with the
	return type `int'. Don't use exit() since it may be undeclared.
	Use `return' instead.
	* gnome-pilot.m4: Likewise.
	* gperf-check.m4: Likewise.
	* linger.m4: Likewise.

2001-06-01  Peter Williams  <peterw@ximian.com>

	* autogen.sh: s,Gnome,$PKG_NAME,g

2001-05-24  Arturo Espinosa Aldama  <arturo@ximian.com>

	* 0.5 RELEASE

2001-05-24  jacob berkman  <jacob@ximian.com>

	* gnome-pthread-check.m4 (GNOME_PTHREAD_CHECK): add hp-ux specific
	check from glib

2001-05-19  Jody Goldberg <jgoldberg@home.com>

	* gnome-gettext.m4 : Add BUILD_INCLUDED_LIBINTL so that newer versions
	  work.
