@@ -1,3 +1,7 @@
+2001-10-02  Darin Adler  <darin@bentspoon.com>
+
+	* autogen.sh: Add intltool support.
+
 2001-09-16  Eskil Heyn Olsen  <eskil@eskil.dk>
 
 	* gnome-pilot.m4:
